@@ -162,7 +162,9 @@ public class ServerServlet extends HttpServlet {
                     // Create a new instance of the application class by
                     // invoking the constructor with the Context parameter.
                     application = (Application) targetClass.getConstructor(
-                            Context.class).newInstance(context);
+                            Context.class).newInstance(
+                            new ServletContextAdapter(this, application,
+                                    context));
                 } catch (NoSuchMethodException e) {
                     log(
                             "[Noelios Restlet Engine] - The ServerServlet couldn't invoke the constructor of the target class. Please check this class has a constructor with a single parameter of Context. The empty constructor and the context setter wille used instead. "
@@ -172,6 +174,10 @@ public class ServerServlet extends HttpServlet {
                     // constructor then invoke the setContext method.
                     application = (Application) targetClass.getConstructor()
                             .newInstance();
+
+                    // Set the context based on the Servlet's context
+                    application.setContext(new ServletContextAdapter(this,
+                            application, context));
                 }
             } catch (ClassNotFoundException e) {
                 log(
@@ -194,12 +200,6 @@ public class ServerServlet extends HttpServlet {
                 log(
                         "[Noelios Restlet Engine] - The ServerServlet couldn't instantiate the target class. An exception was thrown while creating "
                                 + applicationClassName, e);
-            }
-
-            if (application != null) {
-                // Set the context based on the Servlet's context
-                application.setContext(new ServletContextAdapter(this,
-                        application, context));
             }
         }
 
